--- a/dx.html
+++ b/dx.html
@@ -36,7 +36,9 @@ var stoptime;
 var setmax;
 var timelim = 13; // max work milliseconds per anim call
 var largeayes, largebyes, smallano, smallbno, wps, ws, wns, wne ;
-var mincirc = 1000000;
+var mincirc = 2 ;
+// this should always be smaller than mincirc
+var circeps = 1 ;
 /*
  *   Model parameters.
  */
@@ -423,7 +425,7 @@ function doworkfull() {
                        rbm[off>>5] |= 1<<(off&31);
                     }
                     ctx.beginPath();
-                    ctx.arc(x, y, mindist-0.5, 0, 2*Math.PI, false);
+                    ctx.arc(x, y, mindist-circeps, 0, 2*Math.PI, false);
                     ctx.fill();
                 }
             }
@@ -591,7 +593,7 @@ function doworkgen() {
                        rbm[off>>5] |= 1<<(off&31);
                     }
                     ctx.beginPath();
-                    ctx.arc(x, y, mindist-0.5, 0, 2*Math.PI, false);
+                    ctx.arc(x, y, mindist-circeps, 0, 2*Math.PI, false);
                     ctx.fill();
                 }
             }
