slide box cosmetics
added border to slide box

--- a/dx.html
+++ b/dx.html
@@ -926,6 +926,7 @@ function noticeOrder(s) {
         width: 600px;
         height: 60px;
         background-color: #e3e3e3;
+        border: 2px solid #000000;
         position: absolute;
         top: -70px;
         left: 50%;
