--- a/dx.html
+++ b/dx.html
@@ -38,7 +38,7 @@ var timelim = 13; // max work milliseconds per anim call
 var largeayes, largebyes, smallano, smallbno, wps, ws, wns, wne ;
 var mincirc = 2 ;
 // this should always be smaller than mincirc
-var circeps = 1 ;
+var circeps = 1.5 ;
 /*
  *   Model parameters.
  */
@@ -425,7 +425,7 @@ function doworkfull() {
                        rbm[off>>5] |= 1<<(off&31);
                     }
                     ctx.beginPath();
-                    ctx.arc(x, y, mindist-circeps, 0, 2*Math.PI, false);
+                    ctx.arc(x+0.5, y+0.5, mindist-circeps, 0, 2*Math.PI, false);
                     ctx.fill();
                 }
             }
@@ -593,7 +593,7 @@ function doworkgen() {
                        rbm[off>>5] |= 1<<(off&31);
                     }
                     ctx.beginPath();
-                    ctx.arc(x, y, mindist-circeps, 0, 2*Math.PI, false);
+                    ctx.arc(x+0.5, y+0.5, mindist-circeps, 0, 2*Math.PI, false);
                     ctx.fill();
                 }
             }
