--- a/dx.html
+++ b/dx.html
@@ -1019,7 +1019,7 @@ function noticeOrder(s) {
     </datalist>
 
     <div class="button-container" id="button_container1">
-      <button class="button" id="button1" onclick="onlySlider(1)" style="color: #000000; background-color: #e3e3e3;">R1</button>
+      <button class="button" id="button1" onclick="onlySlider(1)" style="color: #000000; background-color: #e3e3e3;">R<sub>1</sub></button>
       <div class="slide_box" id="slide_box1" style="display: block;">
         <input
           type="range"
@@ -1032,7 +1032,7 @@ function noticeOrder(s) {
         />
       </div>
 
-      <button class="button" id="button2" onclick="onlySlider(2)">N1</button>
+      <button class="button" id="button2" onclick="onlySlider(2)">N<sub>1</sub></button>
       <div class="slide_box" id="slide_box2">
         <input
           type="range"
@@ -1047,7 +1047,7 @@ function noticeOrder(s) {
         />
       </div>
 
-      <button class="button" id="button3" onclick="onlySlider(3)">R2</button>
+      <button class="button" id="button3" onclick="onlySlider(3)">R<sub>2</sub></button>
       <div class="slide_box" id="slide_box3">
         <input
           type="range"
@@ -1060,7 +1060,7 @@ function noticeOrder(s) {
         />
       </div>
 
-      <button class="button" id="button4" onclick="onlySlider(4)">N2</button>
+      <button class="button" id="button4" onclick="onlySlider(4)">N<sub>2</sub></button>
       <div class="slide_box" id="slide_box4">
         <input
           type="range"
