--- a/dx.html
+++ b/dx.html
@@ -755,6 +755,18 @@ function noticeOrder(s) {
 
          if (touch_in == document.getElementById('hamburger-menu')){return false;}
 
+         if (touch_in == document.getElementById('button1')){return false;}
+         if (touch_in == document.getElementById('button2')){return false;}
+         if (touch_in == document.getElementById('button3')){return false;}
+         if (touch_in == document.getElementById('button4')){return false;}
+         if (touch_in == document.getElementById('button5')){return false;}
+         if (touch_in == document.getElementById('button6')){return false;}
+         if (touch_in == document.getElementById('button7')){return false;}
+
+         if (touch_in == document.getElementById('button_container1')){return false;}
+
+
+
          return true;
 
       }
