--- a/dx.html
+++ b/dx.html
@@ -1129,7 +1129,7 @@ function noticeOrder(s) {
           list="steplist"
         />
       </div>
-      <button class="button" id="button6" onclick="dorandom()">rnd<sub> </sub></button>
+      <button class="button" id="button6" onclick="dorandom()">&#127922<sub> </sub></button>
 
       <button class="button" id="button5" onclick="onlySlider(5)">z<sub> </sub></button>
       <div class="slide_box" id="slide_box5">
