--- a/dx.html
+++ b/dx.html
@@ -949,13 +949,13 @@ function noticeOrder(s) {
       .slide_box {
         width: 600px;
         height: 60px;
-        background-color: #e3e3e3;
-        border: 2px solid #000000;
+        background-color: #000000;
+        border: 2px solid #4e4e4e;
         position: absolute;
         top: -70px;
         left: 50%;
         transform: translateX(-50%);
-        border-radius: 30px;
+        border-radius: 31px;
         opacity: 1;
         transition: opacity 0.8s;
         display: none;
