--- a/dx.html
+++ b/dx.html
@@ -182,10 +182,26 @@ function dd(pp, i, j) {
    return dx * dx + dy * dy ;
 }
 function drawrbmcirc(x, y, r) {
-   if (y >= 0 && y < height && x >= 0 && x < width) {
-      var off = y * intwidth32 + x ;
-      rbm[off>>5] |= 1<<(off&31);
+   var rr = Math.floor(r); // be conservative
+   for (var yy=Math.max(0, y-rr); yy<Math.min(height, y+rr+1); yy++) {
+      var xd = Math.floor(Math.sqrt(r*r-(yy-y)*(yy-y)));
+      var xx = Math.max(0, x-xd);
+      var hix = Math.min(width, x+xd+1);
+      while (xx < hix) {
+         var off = y * intwidth32 + x ;
+         if (hix - xx >= 32 && (xx & 31) === 0) {
+            rbm[off>>5] = 0xffffffff ;
+            xx += 32;
+         } else {
+            rbm[off>>5] |= 1<<(off&31);
+            xx++;
+         }
+      }
    }
+// if (y >= 0 && y < height && x >= 0 && x < width) {
+//    var off = y * intwidth32 + x ;
+//    rbm[off>>5] |= 1<<(off&31);
+// }
    ctx.beginPath();
    ctx.arc(x+0.5, y+0.5, mindist-circeps, 0, 2*Math.PI, false);
    ctx.fill();
